# genesis

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  SystemVStructClassificator_fix.patch  docker-compose.yml
examples/dotnet/: CMakeLists.txt  dotnet_example.cpp
examples/dotnet/dotnet-pinvoke/: CMakeLists.txt  bindings.cpp  bindings.h  object.cpp  object.h
examples/dotnet/dotnet-script/: DotNetExample.csproj  ImportedObject.cs  Object.cs  UnmanagedCode.cs  UnmanagedObject.cs
examples/mono-scripting/: CMakeLists.txt  mono_scripting.cpp
examples/mono-scripting/scripts/: MessagePrinter.cs
examples/sandbox/: CMakeLists.txt  gui_layer.cpp  gui_layer.h  imgui_demo_layer.cpp  imgui_demo_layer.h  render_layer.cpp  render_layer.h  sandbox.cpp  triangle_layer.cpp  triangle_layer.h
examples/sandbox/assets/shaders/: model_shader.frag  model_shader.vert  shader.frag  shader.vert  shape_shader.frag  shape_shader.vert
examples/sandbox/drawable/: cube.cpp  cube.h  drawable.cpp  drawable.h  model.cpp  model.h  shape.cpp  shape.h  triangle.cpp  triangle.h
examples/sandbox/gui_layer/: camera.cpp  camera.h  gui_layer.cpp  gui_layer.h  gui_layer_window.cpp  gui_layer_window.h
examples/sdl2-vulkan/: CMakeLists.txt  sdl2_vulkan_example.cpp
examples/sdl2-vulkan/shaders/: shader.frag  shader.vert
src/genesis/: CMakeLists.txt
src/genesis/app/: CMakeLists.txt  application.cpp
src/genesis/assets/: CMakeLists.txt  mesh_resource.cpp  package.cpp  pipeline_initializer.cpp  pipeline_resource.cpp  registry.cpp  resource_base.cpp  resource_deserializer.cpp  resource_serializer.cpp  resource_traversal.cpp  texture_resource.cpp
src/genesis/core/: CMakeLists.txt  environment_variables.cpp  filesystem.cpp  log.cpp
src/genesis/dll/: CMakeLists.txt  path.cpp  shared_library.cpp
src/genesis/dll/platform/: path.h  path_apple.cpp  path_unix.cpp  path_windows.cpp  shared_library.h  shared_library_unix.cpp
src/genesis/filesystem/: CMakeLists.txt  file.cpp  filepath.cpp  known_folders.cpp  tmp_dir_guard.cpp
src/genesis/filesystem/platform/: known_folders.h  known_folders_apple.cpp  known_folders_unix.cpp  known_folders_windows.cpp
src/genesis/graphics/: CMakeLists.txt  framebuffer.cpp  gpu_command_queue.cpp  graphics.cpp  graphics_context.cpp  index_buffer.cpp  mesh.cpp  primitives_renderer.cpp  render_command.cpp  render_context.cpp  shader.cpp  shader_input_layout.cpp  shader_precompiler.cpp  shader_program.cpp  shader_reflection.cpp  staging_buffer.cpp  texture.cpp  texture_loader.cpp  uniform_buffer.cpp  vertex_buffer.cpp
src/genesis/graphics/vulkan/: CMakeLists.txt  blending.cpp  blending.h  command_buffer.h  descriptor_pool.cpp  descriptor_pool.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  graphics_factory.cpp  graphics_factory.h  image.cpp  image.h  input_stage_descriptions.cpp  input_stage_descriptions.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipeline_barrier.cpp  pipeline_barrier.h  pipeline_config.cpp  pipeline_config.h  pipeline_resources.cpp  pipeline_resources.h  render_context.cpp  render_context.h  renderer_factory.cpp  renderer_factory.h  sdl_gui_context.cpp  sdl_gui_context.h  sdl_gui_event_handler.cpp  sdl_gui_event_handler.h  sdl_platform_window.h  shader.cpp  shader.h  shader_data_type_size.h  (+11 more)
src/genesis/gui/: CMakeLists.txt  base_layer.cpp  file_dialog.cpp  renderer.cpp
src/genesis/gui/gizmos/: gizmos.cpp  math.cpp
src/genesis/gui/private/: flag_utils.h  types.h
src/genesis/gui/widgets/: button.cpp  checkbox.cpp  combo_box.cpp  drag_drop.cpp  image.cpp  input_text.cpp  item.cpp  main_menu_bar.cpp  menu.cpp  menu_item.cpp  popup.cpp  popup_context_item.cpp  popup_context_window.cpp  same_line.cpp  separator.cpp  style_var.cpp  text.cpp  tree_node.cpp  value_editor.cpp  window.cpp
src/genesis/gui/window/: menu_list.cpp  modal_windows.cpp  window_map.cpp
src/genesis/math/: CMakeLists.txt  types.cpp
src/genesis/physics2d/: CMakeLists.txt  world.cpp
src/genesis/physics2d/b2d/: CMakeLists.txt  world.cpp  (+6 more)
src/genesis/renderer/: CMakeLists.txt  framebuffer.cpp  gpu_command_queue.cpp  index_buffer.cpp  render_command.cpp  render_context.cpp  renderer.cpp  renderer_factory.cpp  shader.cpp  shader_precompiler.cpp  shader_program.cpp  vertex_array.cpp  vertex_buffer.cpp
src/genesis/scene/: CMakeLists.txt  entity.cpp  entity_factory.cpp  entity_node.cpp  entity_picker.cpp  registry.cpp  renderer.cpp  scene.cpp  scene_deserializer.cpp  scene_serializer.cpp
src/genesis/script/: CMakeLists.txt  assembly.cpp  bittable_type.cpp  class.cpp  class_type.cpp  delegate_loader.cpp  domain.cpp  host_framework.cpp  invoke_result.cpp  method.cpp  object.cpp  scripting_engine.cpp  string_type.cpp
src/genesis/window/: CMakeLists.txt  input.cpp  window.cpp
tests/: CMakeLists.txt
tests/assets/: CMakeLists.txt  mesh_resource_test.cpp  resource_id_test.cpp
tests/assets/common/: resource_visitor_mock.h
tests/assets/data/: material_sprite.frag  material_sprite.vert
tests/core/: CMakeLists.txt  result_test.cpp  timestamp_test.cpp
tests/dll/: CMakeLists.txt  shared_library_test.cpp
tests/dll/shared_library_test/: CMakeLists.txt  shared_library_test.c
tests/graphics/: CMakeLists.txt  shader_reflection_test.cpp
tests/graphics/data/: binding_description_test.vert  push_constants_test.vert  shader_reflection_test.vert
tests/renderer/: CMakeLists.txt  shader_reflection_test.cpp
tests/scene/: CMakeLists.txt  component_matchers.h  scene_deserializer_test.cpp  scene_serializer_test.cpp
tests/script/: CMakeLists.txt  assembly_manager_test.cpp  assembly_test.cpp  delegate_loader_test.cpp  domain_test.cpp  host_framework_test.cpp  main.cpp  method_test.cpp  scripting_engine_environment_main.cpp  tested_value.h
tests/script/TestAssembly/: TestAssembly.csproj  TestClass.cs
tests/script/data/: FirstAssembly.cs  MethodTests.cs  SecondAssembly.cs  UnmanagedMethodTests  net9.runtimeconfig.json
tests/window/: CMakeLists.txt  events_test.cpp
(+404 files in other folders)
