include(${PROJECT_SOURCE_DIR}/cmake/AddGTest.cmake)

add_subdirectory(core)
add_subdirectory(dll)
add_subdirectory(graphics)
add_subdirectory(scene)
add_subdirectory(window)

string(TOUPPER "${CMAKE_BUILD_TYPE}" UPPER_BUILD_TYPE)
if (NOT UPPER_BUILD_TYPE MATCHES "(ASAN|TSAN)")
    message(STATUS "Including 'genesis::script' tests for '${CMAKE_BUILD_TYPE}' build type")
    add_subdirectory(script)
else ()
    message(STATUS "Skipping 'genesis::script' tests for '${CMAKE_BUILD_TYPE}' build type")
endif ()
